2005-07-11  Derek Price  <derek@ximbiot.com>

	* mkdir.c, startserver.c, woe32.c: Update license notices.

2005-06-06  Conrad T. Pino  <Conrad@Pino.com>

	* run.c: Add "run_add_arg_p" and "run_arg_free_p" functions.

2005-06-06  Conrad T. Pino  <Conrad@Pino.com>

	* run.c: Reverse patch committed 2005-05-27 by Conrad T. Pino.
	  Reverse both patches committed 2005-05-28 by Conrad T. Pino.

2005-05-28  Conrad T. Pino  <Conrad@Pino.com>

	* run.c: Substitute "xrealloc" function for "xnrealloc" call from
	"run_add_arg_p" function.

2005-05-28  Conrad T. Pino  <Conrad@Pino.com>

	* run.c: Import feature branch revision 1.21 which defines the
	"run_add_arg_p" and "run_arg_free_p" functions.
	FIXME: Function "xnrealloc" call from "run_add_arg_p" undefined.

2005-05-27  Conrad T. Pino  <Conrad@Pino.com>

	* run.c: Import feature branch revision 1.20 as base for adding new
	"run_add_arg_p" and "run_arg_free_p" functions.  Imported revision
	removes "run_arg" function and adds unused "run_piped" function.
	All "run_arg" calls are fixed with macro defined in "../src/cvs.h".
	FIXME: Functions "run_add_arg_p" and "run_arg_free_p" are undefined.

2005-02-08  Derek Price  <derek@ximbiot.com>

	* config.h.in: Clarify comments.

2005-01-31  Derek Price  <derek@ximbiot.com>

	* Makefile.am: Update copyright notices.

2004-11-17  Derek Price  <derek@ximbiot.com>

	* Makefile.am (EXTRA_DIST): Add JmgStat.c & JmgStat.h.
	(Thanks to a report from Chris Bohn <cbohn@rrinc.com>.)

2004-09-07  Derek Price  <derek@ximbiot.com>

	* JmgStat.c, JmgStat.h: New files.
	* filesubr.c (check_statbuf): Use new Windows mod time routine.
	(Thanks to a report from Chris Bohn <cbohn@rrinc.com>, help from J. C.
	Hamlin <jchamlin@ibsys.com>, and a published patch from Jonathan
	Gilligan.)

2004-06-22  Derek Price  <derek@ximbiot.com>

	* config.h.in: Add "inline" & "SIZE_MAX" macros for "xsize.h" header.
	* config.h: Regenerated for "config.h.in" change.